test/e2e/fixtures/tcpmapping-sni-separate-contexts/queries.json
[
  {
    "url": "/",
    "method": "GET",
    "headers": {
      "Host": "a.sni-separate.example.com"
    },
    "sni": true,
    "insecure": true
  },
  {
    "url": "/",
    "method": "GET",
    "headers": {
      "Host": "b.sni-separate.example.com"
    },
    "sni": true,
    "insecure": true
  }
]
